src/frontend/SysYParser.java
package frontend;// Generated from SysY.g4 by ANTLR 4.9.2

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SysYParser extends Parser {

  static {
    RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
      new PredictionContextCache();
  public static final int
      CONST_KW = 1, INT_KW = 2, VOID_KW = 3, IF_KW = 4, ELSE_KW = 5, WHILE_KW = 6, BREAK_KW = 7,
      CONTINUE_KW = 8, RETURN_KW = 9, IDENT = 10, DECIMAL_CONST = 11, OCTAL_CONST = 12,
      HEXADECIMAL_CONST = 13, STRING = 14, PLUS = 15, MINUS = 16, NOT = 17, MUL = 18, DIV = 19,
      MOD = 20, ASSIGN = 21, EQ = 22, NEQ = 23, LT = 24, GT = 25, LE = 26, GE = 27, AND = 28,
      OR = 29, L_PAREN = 30, R_PAREN = 31, L_BRACE = 32, R_BRACE = 33, L_BRACKT = 34, R_BRACKT = 35,
      COMMA = 36, SEMICOLON = 37, DOUBLE_QUOTE = 38, WS = 39, LINE_COMMENT = 40, MULTILINE_COMMENT = 41;
  public static final int
      RULE_program = 0, RULE_compUnit = 1, RULE_decl = 2, RULE_constDecl = 3,
      RULE_bType = 4, RULE_constDef = 5, RULE_constInitVal = 6, RULE_varDecl = 7,
      RULE_varDef = 8, RULE_initVal = 9, RULE_funcDef = 10, RULE_funcType = 11,
      RULE_funcFParams = 12, RULE_funcFParam = 13, RULE_block = 14, RULE_blockItem = 15,
      RULE_stmt = 16, RULE_assignStmt = 17, RULE_expStmt = 18, RULE_conditionStmt = 19,
      RULE_whileStmt = 20, RULE_breakStmt = 21, RULE_continueStmt = 22, RULE_returnStmt = 23,
      RULE_exp = 24, RULE_cond = 25, RULE_lVal = 26, RULE_primaryExp = 27, RULE_number = 28,
      RULE_intConst = 29, RULE_unaryExp = 30, RULE_callee = 31, RULE_unaryOp = 32,
      RULE_funcRParams = 33, RULE_param = 34, RULE_mulExp = 35, RULE_mulOp = 36,
      RULE_addExp = 37, RULE_addOp = 38, RULE_relExp = 39, RULE_relOp = 40,
      RULE_eqExp = 41, RULE_eqOp = 42, RULE_lAndExp = 43, RULE_lOrExp = 44,
      RULE_constExp = 45;

  private static String[] makeRuleNames() {
    return new String[]{
        "program", "compUnit", "decl", "constDecl", "bType", "constDef", "constInitVal",
        "varDecl", "varDef", "initVal", "funcDef", "funcType", "funcFParams",
        "funcFParam", "block", "blockItem", "stmt", "assignStmt", "expStmt",
        "conditionStmt", "whileStmt", "breakStmt", "continueStmt", "returnStmt",
        "exp", "cond", "lVal", "primaryExp", "number", "intConst", "unaryExp",
        "callee", "unaryOp", "funcRParams", "param", "mulExp", "mulOp", "addExp",
        "addOp", "relExp", "relOp", "eqExp", "eqOp", "lAndExp", "lOrExp", "constExp"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[]{
        null, "'const'", "'int'", "'void'", "'if'", "'else'", "'while'", "'break'",
        "'continue'", "'return'", null, null, null, null, null, "'+'", "'-'",
        "'!'", "'*'", "'/'", "'%'", "'='", "'=='", "'!='", "'<'", "'>'", "'<='",
        "'>='", "'&&'", "'||'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','",
        "';'", "'\"'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[]{
        null, "CONST_KW", "INT_KW", "VOID_KW", "IF_KW", "ELSE_KW", "WHILE_KW",
        "BREAK_KW", "CONTINUE_KW", "RETURN_KW", "IDENT", "DECIMAL_CONST", "OCTAL_CONST",
        "HEXADECIMAL_CONST", "STRING", "PLUS", "MINUS", "NOT", "MUL", "DIV",
        "MOD", "ASSIGN", "EQ", "NEQ", "LT", "GT", "LE", "GE", "AND", "OR", "L_PAREN",
        "R_PAREN", "L_BRACE", "R_BRACE", "L_BRACKT", "R_BRACKT", "COMMA", "SEMICOLON",
        "DOUBLE_QUOTE", "WS", "LINE_COMMENT", "MULTILINE_COMMENT"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "SysY.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public SysYParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class ProgramContext extends ParserRuleContext {

    public CompUnitContext compUnit() {
      return getRuleContext(CompUnitContext.class, 0);
    }

    public ProgramContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_program;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitProgram(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final ProgramContext program() throws RecognitionException {
    ProgramContext _localctx = new ProgramContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_program);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(92);
        compUnit();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class CompUnitContext extends ParserRuleContext {

    public List<FuncDefContext> funcDef() {
      return getRuleContexts(FuncDefContext.class);
    }

    public FuncDefContext funcDef(int i) {
      return getRuleContext(FuncDefContext.class, i);
    }

    public List<DeclContext> decl() {
      return getRuleContexts(DeclContext.class);
    }

    public DeclContext decl(int i) {
      return getRuleContext(DeclContext.class, i);
    }

    public CompUnitContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_compUnit;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitCompUnit(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final CompUnitContext compUnit() throws RecognitionException {
    CompUnitContext _localctx = new CompUnitContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_compUnit);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(96);
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
            setState(96);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
              case 1: {
                setState(94);
                funcDef();
              }
              break;
              case 2: {
                setState(95);
                decl();
              }
              break;
            }
          }
          setState(98);
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while ((((_la) & ~0x3f) == 0
            && ((1L << _la) & ((1L << CONST_KW) | (1L << INT_KW) | (1L << VOID_KW))) != 0));
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class DeclContext extends ParserRuleContext {

    public ConstDeclContext constDecl() {
      return getRuleContext(ConstDeclContext.class, 0);
    }

    public VarDeclContext varDecl() {
      return getRuleContext(VarDeclContext.class, 0);
    }

    public DeclContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_decl;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitDecl(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final DeclContext decl() throws RecognitionException {
    DeclContext _localctx = new DeclContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_decl);
    try {
      setState(102);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case CONST_KW:
          enterOuterAlt(_localctx, 1);
        {
          setState(100);
          constDecl();
        }
        break;
        case INT_KW:
          enterOuterAlt(_localctx, 2);
        {
          setState(101);
          varDecl();
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ConstDeclContext extends ParserRuleContext {

    public TerminalNode CONST_KW() {
      return getToken(SysYParser.CONST_KW, 0);
    }

    public BTypeContext bType() {
      return getRuleContext(BTypeContext.class, 0);
    }

    public List<ConstDefContext> constDef() {
      return getRuleContexts(ConstDefContext.class);
    }

    public ConstDefContext constDef(int i) {
      return getRuleContext(ConstDefContext.class, i);
    }

    public TerminalNode SEMICOLON() {
      return getToken(SysYParser.SEMICOLON, 0);
    }

    public List<TerminalNode> COMMA() {
      return getTokens(SysYParser.COMMA);
    }

    public TerminalNode COMMA(int i) {
      return getToken(SysYParser.COMMA, i);
    }

    public ConstDeclContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_constDecl;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitConstDecl(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final ConstDeclContext constDecl() throws RecognitionException {
    ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_constDecl);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(104);
        match(CONST_KW);
        setState(105);
        bType();
        setState(106);
        constDef();
        setState(111);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == COMMA) {
          {
            {
              setState(107);
              match(COMMA);
              setState(108);
              constDef();
            }
          }
          setState(113);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(114);
        match(SEMICOLON);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class BTypeContext extends ParserRuleContext {

    public TerminalNode INT_KW() {
      return getToken(SysYParser.INT_KW, 0);
    }

    public BTypeContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_bType;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitBType(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final BTypeContext bType() throws RecognitionException {
    BTypeContext _localctx = new BTypeContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_bType);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(116);
        match(INT_KW);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ConstDefContext extends ParserRuleContext {

    public TerminalNode IDENT() {
      return getToken(SysYParser.IDENT, 0);
    }

    public TerminalNode ASSIGN() {
      return getToken(SysYParser.ASSIGN, 0);
    }

    public ConstInitValContext constInitVal() {
      return getRuleContext(ConstInitValContext.class, 0);
    }

    public List<TerminalNode> L_BRACKT() {
      return getTokens(SysYParser.L_BRACKT);
    }

    public TerminalNode L_BRACKT(int i) {
      return getToken(SysYParser.L_BRACKT, i);
    }

    public List<ConstExpContext> constExp() {
      return getRuleContexts(ConstExpContext.class);
    }

    public ConstExpContext constExp(int i) {
      return getRuleContext(ConstExpContext.class, i);
    }

    public List<TerminalNode> R_BRACKT() {
      return getTokens(SysYParser.R_BRACKT);
    }

    public TerminalNode R_BRACKT(int i) {
      return getToken(SysYParser.R_BRACKT, i);
    }

    public ConstDefContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_constDef;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitConstDef(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final ConstDefContext constDef() throws RecognitionException {
    ConstDefContext _localctx = new ConstDefContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_constDef);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(118);
        match(IDENT);
        setState(125);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == L_BRACKT) {
          {
            {
              setState(119);
              match(L_BRACKT);
              setState(120);
              constExp();
              setState(121);
              match(R_BRACKT);
            }
          }
          setState(127);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(128);
        match(ASSIGN);
        setState(129);
        constInitVal();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ConstInitValContext extends ParserRuleContext {
    public ArrayList<Integer> dimInfo_;
    public ConstExpContext constExp() {
      return getRuleContext(ConstExpContext.class, 0);
    }

    public TerminalNode L_BRACE() {
      return getToken(SysYParser.L_BRACE, 0);
    }

    public TerminalNode R_BRACE() {
      return getToken(SysYParser.R_BRACE, 0);
    }

    public List<ConstInitValContext> constInitVal() {
      return getRuleContexts(ConstInitValContext.class);
    }

    public ConstInitValContext constInitVal(int i) {
      return getRuleContext(ConstInitValContext.class, i);
    }

    public List<TerminalNode> COMMA() {
      return getTokens(SysYParser.COMMA);
    }

    public TerminalNode COMMA(int i) {
      return getToken(SysYParser.COMMA, i);
    }

    public ConstInitValContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_constInitVal;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitConstInitVal(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final ConstInitValContext constInitVal() throws RecognitionException {
    ConstInitValContext _localctx = new ConstInitValContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_constInitVal);
    int _la;
    try {
      setState(144);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case IDENT:
        case DECIMAL_CONST:
        case OCTAL_CONST:
        case HEXADECIMAL_CONST:
        case PLUS:
        case MINUS:
        case NOT:
        case L_PAREN:
          enterOuterAlt(_localctx, 1);
        {
          setState(131);
          constExp();
        }
        break;
        case L_BRACE:
          enterOuterAlt(_localctx, 2);
        {
          {
            setState(132);
            match(L_BRACE);
            setState(141);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if ((((_la) & ~0x3f) == 0 &&
                ((1L << _la) & ((1L << IDENT) | (1L << DECIMAL_CONST) | (1L << OCTAL_CONST) | (1L
                    << HEXADECIMAL_CONST) | (1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L
                    << L_PAREN) | (1L << L_BRACE))) != 0)) {
              {
                setState(133);
                constInitVal();
                setState(138);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                  {
                    {
                      setState(134);
                      match(COMMA);
                      setState(135);
                      constInitVal();
                    }
                  }
                  setState(140);
                  _errHandler.sync(this);
                  _la = _input.LA(1);
                }
              }
            }

            setState(143);
            match(R_BRACE);
          }
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VarDeclContext extends ParserRuleContext {

    public BTypeContext bType() {
      return getRuleContext(BTypeContext.class, 0);
    }

    public List<VarDefContext> varDef() {
      return getRuleContexts(VarDefContext.class);
    }

    public VarDefContext varDef(int i) {
      return getRuleContext(VarDefContext.class, i);
    }

    public TerminalNode SEMICOLON() {
      return getToken(SysYParser.SEMICOLON, 0);
    }

    public List<TerminalNode> COMMA() {
      return getTokens(SysYParser.COMMA);
    }

    public TerminalNode COMMA(int i) {
      return getToken(SysYParser.COMMA, i);
    }

    public VarDeclContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_varDecl;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitVarDecl(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final VarDeclContext varDecl() throws RecognitionException {
    VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_varDecl);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(146);
        bType();
        setState(147);
        varDef();
        setState(152);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == COMMA) {
          {
            {
              setState(148);
              match(COMMA);
              setState(149);
              varDef();
            }
          }
          setState(154);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(155);
        match(SEMICOLON);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VarDefContext extends ParserRuleContext {

    public TerminalNode IDENT() {
      return getToken(SysYParser.IDENT, 0);
    }

    public List<TerminalNode> L_BRACKT() {
      return getTokens(SysYParser.L_BRACKT);
    }

    public TerminalNode L_BRACKT(int i) {
      return getToken(SysYParser.L_BRACKT, i);
    }

    public List<ConstExpContext> constExp() {
      return getRuleContexts(ConstExpContext.class);
    }

    public ConstExpContext constExp(int i) {
      return getRuleContext(ConstExpContext.class, i);
    }

    public List<TerminalNode> R_BRACKT() {
      return getTokens(SysYParser.R_BRACKT);
    }

    public TerminalNode R_BRACKT(int i) {
      return getToken(SysYParser.R_BRACKT, i);
    }

    public TerminalNode ASSIGN() {
      return getToken(SysYParser.ASSIGN, 0);
    }

    public InitValContext initVal() {
      return getRuleContext(InitValContext.class, 0);
    }

    public VarDefContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_varDef;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitVarDef(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final VarDefContext varDef() throws RecognitionException {
    VarDefContext _localctx = new VarDefContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_varDef);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(157);
        match(IDENT);
        setState(164);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == L_BRACKT) {
          {
            {
              setState(158);
              match(L_BRACKT);
              setState(159);
              constExp();
              setState(160);
              match(R_BRACKT);
            }
          }
          setState(166);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(169);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == ASSIGN) {
          {
            setState(167);
            match(ASSIGN);
            setState(168);
            initVal();
          }
        }

      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class InitValContext extends ParserRuleContext {

    public ExpContext exp() {
      return getRuleContext(ExpContext.class, 0);
    }

    public TerminalNode L_BRACE() {
      return getToken(SysYParser.L_BRACE, 0);
    }

    public TerminalNode R_BRACE() {
      return getToken(SysYParser.R_BRACE, 0);
    }

    public List<InitValContext> initVal() {
      return getRuleContexts(InitValContext.class);
    }

    public InitValContext initVal(int i) {
      return getRuleContext(InitValContext.class, i);
    }

    public List<TerminalNode> COMMA() {
      return getTokens(SysYParser.COMMA);
    }

    public TerminalNode COMMA(int i) {
      return getToken(SysYParser.COMMA, i);
    }

    public InitValContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_initVal;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitInitVal(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final InitValContext initVal() throws RecognitionException {
    InitValContext _localctx = new InitValContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_initVal);
    int _la;
    try {
      setState(184);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case IDENT:
        case DECIMAL_CONST:
        case OCTAL_CONST:
        case HEXADECIMAL_CONST:
        case PLUS:
        case MINUS:
        case NOT:
        case L_PAREN:
          enterOuterAlt(_localctx, 1);
        {
          setState(171);
          exp();
        }
        break;
        case L_BRACE:
          enterOuterAlt(_localctx, 2);
        {
          {
            setState(172);
            match(L_BRACE);
            setState(181);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if ((((_la) & ~0x3f) == 0 &&
                ((1L << _la) & ((1L << IDENT) | (1L << DECIMAL_CONST) | (1L << OCTAL_CONST) | (1L
                    << HEXADECIMAL_CONST) | (1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L
                    << L_PAREN) | (1L << L_BRACE))) != 0)) {
              {
                setState(173);
                initVal();
                setState(178);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                  {
                    {
                      setState(174);
                      match(COMMA);
                      setState(175);
                      initVal();
                    }
                  }
                  setState(180);
                  _errHandler.sync(this);
                  _la = _input.LA(1);
                }
              }
            }

            setState(183);
            match(R_BRACE);
          }
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FuncDefContext extends ParserRuleContext {

    public FuncTypeContext funcType() {
      return getRuleContext(FuncTypeContext.class, 0);
    }

    public TerminalNode IDENT() {
      return getToken(SysYParser.IDENT, 0);
    }

    public TerminalNode L_PAREN() {
      return getToken(SysYParser.L_PAREN, 0);
    }

    public TerminalNode R_PAREN() {
      return getToken(SysYParser.R_PAREN, 0);
    }

    public BlockContext block() {
      return getRuleContext(BlockContext.class, 0);
    }

    public FuncFParamsContext funcFParams() {
      return getRuleContext(FuncFParamsContext.class, 0);
    }

    public FuncDefContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_funcDef;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SysYVisitor) {
        return ((SysYVisitor<? extends T>) visitor).visitFuncDef(this);
      } else {
        return visitor.visitChildren(this);
      }
    }
  }

  public final FuncDefContext funcDef() throws RecognitionException {
    FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_funcDef);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(186);
        funcType();
        setState(187);
        match(IDENT);
        setState(188);
        match(L_PAREN);
        setState(190);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == INT_KW) {
          {
            setState(189);
            funcFParams();
          }
        }

        setState(192);
        match(R_PAREN);
        setState(193);
        block();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FuncTypeContext extends ParserRuleContext {

    public TerminalNode VOID_KW() {
      return getToken(SysYParser.VOID_KW, 0);
    }

    public TerminalNode INT_KW() {
      return getToken(SysYParser.INT_KW, 0);
    }

    public FuncTypeContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
